# q2admin-nxmod

./: .clang-format  .drone.yml  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  Makefile  README.md  g_local.h  g_main.c  q2admin.txt  q2discord.json  q_shared.h  readme.txt  zb_ban.c  zb_checkvar.c  zb_cmd.c  zb_disable.c  zb_discord.c  zb_discord.h  zb_flood.c  zb_init.c  zb_log.c  zb_lrcon.c  zb_spawn.c  zb_vote.c  zb_zbot.c
data/: q2admin.txt
docs/: readme.txt
src/: g_local.h  g_main.c  q_shared.h  zb_checkvar.c  zb_cmd.c  zb_discord.c  zb_discord.h  zb_init.c  zb_log.c  zb_vote.c  zb_zbot.c  zbot.rc.in
tools/: NXBuild.cmake
